<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interfaz_hardware_omni_v1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dna291@gmail.com">daniel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
<depend>pluginlib</depend>
<depend>controller_manager</depend>
<depend>hardware_interface</depend>
<depends>serial</depends>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
